--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -62,7 +62,7 @@ body {
   background-color: #f6f6f6;
   transition: background-color 0.3s ease;
 }
-.wishlist-item_action .item-action{
+.wishlist-item_action .item-action {
   display: flex;
   justify-content: space-evenly;
 }
@@ -94,4 +94,8 @@ body {
 .tf-btn:hover .tooltip-text {
   visibility: visible;
   opacity: 1;
+}
+
+.swiper-wrapper .swiper-slide.swiper-slide-visible.swiper-slide-fully-visible {
+  width: 5rem !important;
 }
